fixing navigation buttons on small screens

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -86,16 +86,21 @@ div > p {
 
 }
 .navigation{ 
-    // background-color: purple;
+   display: inline-block;
+    // @include flex(row, center, center);
+    // justify-content: space-around;
     font-size: 0.5rem;
     width: 100%;
-    padding: 0;
+    padding: 0.4rem;
+    
     button{
-      margin: 0 0.3rem;
-      padding: 0.2rem 0.3rem;
+      display: block;
+      margin:  0 auto;
+      padding: 0.3rem 0.4rem;
       font-size: 1rem;
       border: 1px solid rgba(167, 215, 204, 0.5);
       border-radius: 10px;
+     
       &:hover{
           background-color: $green-bright;
           color: $green-dark;
@@ -106,6 +111,11 @@ div > p {
           transition-duration: 0.5s;
           }
     }
+     a{
+      
+      padding:0;
+      margin:0;
+     }
 }
 
 .project1, .project2, .project3, .project4, .CSSplayground, .project6{
